# untitled-game

./: .gitignore  CMakeLists.txt
dep/old/imgui/: CMakeLists.txt
dep/old/imgui-sfml/: CMakeLists.txt
dep/old/sfml/: CMakeLists.txt
doc/: TODO.md
include/: category.h  command.h  conf.h  creature.h  data_tables.h  entity.h  player.h  projectile.h  r_ids.h  s_game.h  s_menu.h  scene_node.h  script.h  sprite_node.h  text_node.h  utility.h  world.h
scripts/: cmake-clean-build.sh
src/: app.cpp  creature.cpp  data_tables.cpp  entity.cpp  main.cpp  player.cpp  s_game.cpp  s_menu.cpp  s_settings.cpp  s_stack.cpp  scene_node.cpp  sprite_node.cpp  text_node.cpp  utility.cpp  world.cpp
